# GraviSAT

./: LICENSE  README.md  gradlew  settings.gradle.kts
.github/workflows/: android_build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  cpp
app/src/main/cpp/: CMakeLists.txt  analyzer.cpp  analyzer.h  clause.cpp  clause.h  conflict.cpp  dimacs_parser.cpp  dimacs_parser.h  gravisat_core.c  gravisat_core.cpp  gravisat_core.h  gravisat_jni.cpp  heuristics.cpp  jni_bridge.cpp  propagation.cpp  restart.cpp  solver.cpp  solver.h  solver_state.h  temp.txt  vsids.cpp  vsids.h  watcher.cpp  watcher.h
app/src/main/java/com/example/gravisat/: MainActivity.kt
app/src/main/java/com/gravisat/shield/: MainActivity.kt
app/src/main/java/in/gov/cyber/shield/gravisat/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
